<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/checkin_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:text="@string/checkin_image"/>
            <ImageButton

                android:id="@+id/checkin_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_image"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_title_label" />
            <EditText
                android:id="@+id/checkin_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/checkin_title_hint"/>
        </LinearLayout>

    </LinearLayout>




    <TextView        style="?android:listSeparatorTextViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/checkin_restaurant_name"/>
    <EditText
        android:id="@+id/checkin_restaurantPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_restaurant_name_hint"/>


    <TextView        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_restaurant_details"/>

    <EditText
        android:id="@+id/checkin_cmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_comment_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:text="@string/checkin_location"/>




    <Button
        android:id="@+id/checkin_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
    android:id="@+id/save_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"/>

        <Button
            android:id="@+id/checkin_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Delete" />

    </LinearLayout>
    </LinearLayout>